2002-11-13  C. Brian Jones <cbj@gnu.org>

	* gnu/testlet/java/beans/Introspector/jdk11.java (test): add
	checks for other 1.1 member functions of Introspector; remove
	failing checks against classes that change often and use new
	checks against A, B, and C in this package.  
	* gnu/testlet/java/beans/Introspector/A.java: new file
	* gnu/testlet/java/beans/Introspector/B.java: new file
	* gnu/testlet/java/beans/Introspector/C.java: new file
	* gnu/testlet/java/beans/Introspector/jdk12.java (test): check 
	values of static final fields to match the specification

2002-11-06  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/Random/basic.java (test): Added regression
	test for Classpath bug.

2002-11-06  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/InputStreamReader/jdk11:
	Added tests to complete testing of all methods

2002-11-03  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/reflect.java: Add array class checks.
	* mauve/gnu/testlet/java/lang/Class/reflect2.java: Uses rf_help.
	* gnu/testlet/java/lang/Class/rf_help.java: Prevent creation of
	synthetic methods.

2002-10-28  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FileInputStream/read.java: New test.
	* gnu/testlet/java/io/FileOutputStream/write.java: New test.
	* gnu/testlet/java/io/InputStreamReader/except.java: Show debug.

2002-10-27  Mark Wielaard  <mark@klomp.org>

	* gnu.testlet.java.lang.StringBuffer.StringBufferTest (test_insert):
	Test for IndexOutOfBoundException not NullPointerException.

2002-10-28  Stephen Crawley <crawley@dstc.edu.au>
        * gnu/testlet/java/lang/Class/reflect.java: Added tests for
	getField and getDeclaredField with inherited fields.

2002-10-26  Daryl Lee <dol@sources.redhat.com>

	* gnu/testlet/java/io/PushbackInputStream: Added tests for
	available() and markSupported(), to complete method tests.

2002-10-26  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResource.java: New test.
